[project]
name = "rtl-haos"
version = "1.1.11"
description = "RTL-SDR to Home Assistant MQTT bridge"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "paho-mqtt==2.1.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "pytest-mock>=3.12.0",
]


[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"


markers = [
  "integration: opt-in tests that execute rtl_433 (external process)",
  "hardware: opt-in tests that require RTL-SDR hardware",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
# Start strict-ish, but ignore a few noisy rules so existing code passes.
select = ["E9", "F"]
ignore = [
  "E501",  # line length (handled by formatter / practical for logs)
  "F401",  # unused imports (often used during refactors)
  "F841",  # assigned but unused (tests/helpers)
]

[tool.ruff.lint.isort]
known-first-party = [
  "config",
  "mqtt_handler",
  "data_processor",
  "rtl_manager",
  "system_monitor",
  "utils",
  "field_meta",
]

[tool.coverage.run]
branch = true
source = ["."]
omit = [
  "tests/*",
  "*/__init__.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = true

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
